Show maptiler image using correct coordinates